--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "cayden-keene-portfolio",
   "version": "0.1.0",
   "private": true,
+  "description": "Personal portfolio website for Cayden Keene - Computer Science student at University of Florida",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.526.0",
     "next": "15.0.2",
     "next-themes": "^0.4.6",
